objects/Potential_Risk__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Risk_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Potential Risk Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Potential_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <referenceTo>Offering_Release__c</referenceTo>
        <relationshipLabel>Potential Risks</relationshipLabel>
        <relationshipName>Potential_Risks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Potential Risk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_ID__c</columns>
        <columns>Potential_Risk_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000000000}</displayFormat>
        <label>Potential Risk ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Description_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
Description__c =&apos;&apos;,
Description__c =null
)</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Description is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Potential_Risk_Owner_Shouldnt_be_Null</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   Potential_Risk_Owner__c  = &apos;&apos;,
   Potential_Risk_Owner__c  = null
)</errorConditionFormula>
        <errorDisplayField>Potential_Risk_Owner__c</errorDisplayField>
        <errorMessage>Please select the Owner</errorMessage>
    </validationRules>
</CustomObject>